syntax = "proto3";
package carboncub;
option go_package = "github.com/cragcraig/carboncub-build-log/protos";

import "google/protobuf/timestamp.proto";

message ImageReference {
  // TODO
}

message PartReference {
  // TODO
}

message ManualReference {
  // TODO
}

message TaskDetails {
  string description = 1;
  repeated ImageReference images = 2;
  repeated PartReference parts = 3;
  repeated ManualReference manuals = 4;
}

message BuildWorkEntry {
  string title = 1;
  string summary = 2;
  repeated TaskDetails details = 3;
}

message BuildLogEntry {
  int32 id = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
  BuildWorkEntry work = 4;
}

