syntax = "proto3";
package carboncub;
option go_package = "github.com/cragcraig/ccub/protos";

message TimePeriod {
  // e.g., 5:00PM
  string start_time = 1;
  uint32 duration_min = 2;
}

message BuildLogEntryMetadata {
  // Top-level component, i.e., "left wing"
  string assembly = 1;

  // Next-level components i.e., "center ribs"
  repeated string subassembly = 2;

  // e.g., 2006-Jan-02
  string date = 3;

  repeated TimePeriod work_period = 4;  

  string details_file = 5;
  repeated string tags = 6;
}

message BuildLogs {
  repeated BuildLogEntryMetadata log_entry = 1;
}
